fixed issue with black bar at bottom of screen on firefox.

--- a/css/projects.css
+++ b/css/projects.css
@@ -2,8 +2,6 @@ body,
 html {
   background-color: #273c54;
   font-family: 'Gidole';
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -59,6 +57,7 @@ html {
   row-gap: 24px;
   box-sizing: border-box;
   width: 98%;
+  background-color: #273c54;
 }
 
 #title-bar {
